[gd_scene load_steps=9 format=3 uid="uid://cpu5ad4r0a7c0"]

[ext_resource type="Script" path="res://Scripts/buildable.gd" id="1_7s1um"]
[ext_resource type="Texture2D" uid="uid://o0gpo0xpcfed" path="res://Assets/Models/props/props1_Table.png" id="2_dopno"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jak58"]
size = Vector3(1.42516, 1.23364, 1.35335)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5ffhn"]
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v0clj"]
resource_name = "Table"
transparency = 4
cull_mode = 2
albedo_texture = ExtResource("2_dopno")

[sub_resource type="ArrayMesh" id="ArrayMesh_rvifb"]
_surfaces = [{
"aabb": AABB(-0.756075, -0.833796, -0.756075, 1.51215, 0.917038, 1.51215),
"format": 34896613377,
"index_count": 204,
"index_data": PackedByteArray(0, 0, 3, 0, 1, 0, 0, 0, 2, 0, 3, 0, 2, 0, 7, 0, 3, 0, 2, 0, 6, 0, 7, 0, 6, 0, 5, 0, 7, 0, 6, 0, 4, 0, 5, 0, 4, 0, 1, 0, 5, 0, 4, 0, 0, 0, 1, 0, 2, 0, 4, 0, 6, 0, 2, 0, 0, 0, 4, 0, 8, 0, 11, 0, 10, 0, 8, 0, 9, 0, 11, 0, 10, 0, 15, 0, 14, 0, 10, 0, 11, 0, 15, 0, 14, 0, 13, 0, 12, 0, 14, 0, 15, 0, 13, 0, 12, 0, 9, 0, 8, 0, 12, 0, 13, 0, 9, 0, 10, 0, 12, 0, 8, 0, 10, 0, 14, 0, 12, 0, 16, 0, 19, 0, 18, 0, 16, 0, 17, 0, 19, 0, 18, 0, 23, 0, 22, 0, 18, 0, 19, 0, 23, 0, 22, 0, 21, 0, 20, 0, 22, 0, 23, 0, 21, 0, 20, 0, 17, 0, 16, 0, 20, 0, 21, 0, 17, 0, 18, 0, 20, 0, 16, 0, 18, 0, 22, 0, 20, 0, 24, 0, 27, 0, 25, 0, 24, 0, 26, 0, 27, 0, 26, 0, 31, 0, 27, 0, 26, 0, 30, 0, 31, 0, 30, 0, 29, 0, 31, 0, 30, 0, 28, 0, 29, 0, 28, 0, 25, 0, 29, 0, 28, 0, 24, 0, 25, 0, 26, 0, 28, 0, 30, 0, 26, 0, 24, 0, 28, 0, 41, 0, 35, 0, 42, 0, 41, 0, 32, 0, 35, 0, 45, 0, 43, 0, 46, 0, 45, 0, 40, 0, 43, 0, 43, 0, 47, 0, 46, 0, 47, 0, 39, 0, 38, 0, 39, 0, 35, 0, 34, 0, 35, 0, 43, 0, 42, 0, 43, 0, 39, 0, 47, 0, 39, 0, 43, 0, 35, 0, 33, 0, 39, 0, 34, 0, 33, 0, 36, 0, 39, 0, 37, 0, 47, 0, 38, 0, 37, 0, 44, 0, 47, 0, 32, 0, 34, 0, 35, 0, 32, 0, 33, 0, 34, 0, 38, 0, 36, 0, 37, 0, 38, 0, 39, 0, 36, 0, 46, 0, 44, 0, 45, 0, 46, 0, 47, 0, 44, 0, 42, 0, 40, 0, 41, 0, 42, 0, 43, 0, 40, 0, 33, 0, 37, 0, 36, 0, 37, 0, 45, 0, 44, 0, 45, 0, 41, 0, 40, 0, 41, 0, 33, 0, 32, 0, 33, 0, 45, 0, 37, 0, 45, 0, 33, 0, 41, 0),
"name": "Table",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray(15, 251, 0, 0, 208, 127, 0, 0, 9, 231, 40, 247, 49, 131, 0, 0, 15, 251, 0, 0, 224, 122, 0, 0, 9, 231, 40, 247, 65, 126, 0, 0, 254, 255, 0, 0, 208, 127, 0, 0, 249, 235, 40, 247, 49, 131, 0, 0, 254, 255, 0, 0, 224, 122, 0, 0, 249, 235, 40, 247, 65, 126, 0, 0, 46, 128, 0, 0, 239, 4, 0, 0, 205, 124, 40, 247, 245, 24, 0, 0, 30, 133, 0, 0, 239, 4, 0, 0, 189, 129, 40, 247, 245, 24, 0, 0, 46, 128, 0, 0, 0, 0, 0, 0, 205, 124, 40, 247, 5, 20, 0, 0, 30, 133, 0, 0, 0, 0, 0, 0, 189, 129, 40, 247, 5, 20, 0, 0, 208, 127, 0, 0, 15, 251, 0, 0, 49, 131, 40, 247, 9, 231, 0, 0, 224, 122, 0, 0, 15, 251, 0, 0, 65, 126, 40, 247, 9, 231, 0, 0, 208, 127, 0, 0, 255, 255, 0, 0, 49, 131, 40, 247, 249, 235, 0, 0, 224, 122, 0, 0, 255, 255, 0, 0, 65, 126, 40, 247, 249, 235, 0, 0, 239, 4, 0, 0, 46, 128, 0, 0, 244, 24, 40, 247, 205, 124, 0, 0, 239, 4, 0, 0, 30, 133, 0, 0, 244, 24, 40, 247, 189, 129, 0, 0, 0, 0, 0, 0, 46, 128, 0, 0, 5, 20, 40, 247, 205, 124, 0, 0, 0, 0, 0, 0, 30, 133, 0, 0, 5, 20, 40, 247, 189, 129, 0, 0, 160, 7, 221, 246, 165, 137, 0, 0, 160, 7, 221, 246, 89, 118, 0, 0, 160, 7, 255, 255, 89, 118, 0, 0, 160, 7, 255, 255, 165, 137, 0, 0, 89, 118, 221, 246, 160, 7, 0, 0, 165, 137, 221, 246, 160, 7, 0, 0, 165, 137, 255, 255, 160, 7, 0, 0, 89, 118, 255, 255, 160, 7, 0, 0, 165, 137, 221, 246, 94, 248, 0, 0, 89, 118, 221, 246, 94, 248, 0, 0, 89, 118, 255, 255, 94, 248, 0, 0, 165, 137, 255, 255, 94, 248, 0, 0, 94, 248, 221, 246, 89, 118, 0, 0, 94, 248, 221, 246, 165, 137, 0, 0, 94, 248, 255, 255, 165, 137, 0, 0, 94, 248, 255, 255, 89, 118, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_ygogu"]
resource_name = "props1_Table"
_surfaces = [{
"aabb": AABB(-0.756075, -0.833796, -0.756075, 1.51215, 0.917038, 1.51215),
"attribute_data": PackedByteArray(255, 236, 153, 247, 225, 241, 67, 162, 165, 246, 68, 248, 23, 245, 132, 73, 114, 235, 217, 72, 185, 242, 254, 247, 71, 242, 137, 156, 165, 246, 68, 248, 209, 250, 233, 73, 114, 235, 217, 72, 155, 247, 168, 162, 95, 252, 169, 248, 255, 236, 153, 247, 43, 241, 62, 73, 23, 245, 132, 73, 0, 248, 238, 156, 95, 252, 169, 248, 185, 242, 254, 247, 43, 241, 62, 73, 209, 250, 233, 73, 165, 246, 68, 248, 225, 241, 67, 162, 255, 236, 153, 247, 114, 235, 217, 72, 23, 245, 132, 73, 71, 242, 137, 156, 185, 242, 254, 247, 165, 246, 68, 248, 209, 250, 233, 73, 114, 235, 217, 72, 95, 252, 169, 248, 155, 247, 168, 162, 255, 236, 153, 247, 43, 241, 62, 73, 23, 245, 132, 73, 0, 248, 238, 156, 185, 242, 254, 247, 95, 252, 169, 248, 209, 250, 233, 73, 43, 241, 62, 73, 225, 241, 67, 162, 255, 236, 153, 247, 165, 246, 68, 248, 23, 245, 132, 73, 114, 235, 217, 72, 165, 246, 68, 248, 71, 242, 137, 156, 185, 242, 254, 247, 114, 235, 217, 72, 209, 250, 233, 73, 155, 247, 168, 162, 255, 236, 153, 247, 95, 252, 169, 248, 23, 245, 132, 73, 43, 241, 62, 73, 95, 252, 169, 248, 0, 248, 238, 156, 185, 242, 254, 247, 43, 241, 62, 73, 209, 250, 233, 73, 225, 241, 67, 162, 165, 246, 68, 248, 255, 236, 153, 247, 114, 235, 217, 72, 23, 245, 132, 73, 71, 242, 137, 156, 165, 246, 68, 248, 185, 242, 254, 247, 114, 235, 217, 72, 209, 250, 233, 73, 255, 236, 153, 247, 155, 247, 168, 162, 95, 252, 169, 248, 23, 245, 132, 73, 43, 241, 62, 73, 185, 242, 254, 247, 0, 248, 238, 156, 95, 252, 169, 248, 209, 250, 233, 73, 43, 241, 62, 73, 151, 226, 106, 76, 44, 19, 244, 250, 151, 226, 29, 62, 151, 226, 106, 76, 10, 4, 210, 235, 102, 232, 29, 62, 102, 232, 106, 76, 118, 193, 96, 255, 102, 232, 106, 76, 235, 208, 235, 239, 151, 226, 147, 240, 151, 226, 29, 62, 10, 4, 44, 62, 44, 19, 10, 47, 151, 226, 106, 76, 158, 0, 235, 239, 102, 232, 106, 76, 102, 232, 29, 62, 102, 232, 147, 240, 19, 16, 96, 255, 244, 207, 210, 235, 151, 226, 225, 254, 151, 226, 106, 76, 151, 226, 147, 240, 210, 192, 244, 250, 102, 232, 147, 240, 235, 208, 136, 62, 118, 193, 19, 47, 102, 232, 106, 76, 102, 232, 225, 254, 210, 192, 10, 47, 151, 226, 147, 240, 244, 207, 44, 62, 151, 226, 147, 240, 151, 226, 225, 254, 19, 16, 19, 47, 102, 232, 147, 240, 102, 232, 225, 254, 158, 0, 136, 62, 102, 232, 147, 240),
"format": 34896613399,
"index_count": 204,
"index_data": PackedByteArray(0, 0, 8, 0, 3, 0, 0, 0, 5, 0, 8, 0, 7, 0, 18, 0, 9, 0, 7, 0, 16, 0, 18, 0, 17, 0, 14, 0, 19, 0, 17, 0, 12, 0, 14, 0, 11, 0, 4, 0, 13, 0, 11, 0, 2, 0, 4, 0, 6, 0, 10, 0, 15, 0, 6, 0, 1, 0, 10, 0, 22, 0, 28, 0, 26, 0, 22, 0, 24, 0, 28, 0, 27, 0, 39, 0, 37, 0, 27, 0, 29, 0, 39, 0, 36, 0, 34, 0, 32, 0, 36, 0, 38, 0, 34, 0, 30, 0, 23, 0, 20, 0, 30, 0, 33, 0, 23, 0, 25, 0, 31, 0, 21, 0, 25, 0, 35, 0, 31, 0, 41, 0, 49, 0, 47, 0, 41, 0, 43, 0, 49, 0, 45, 0, 58, 0, 55, 0, 45, 0, 48, 0, 58, 0, 57, 0, 53, 0, 51, 0, 57, 0, 59, 0, 53, 0, 52, 0, 44, 0, 42, 0, 52, 0, 54, 0, 44, 0, 46, 0, 50, 0, 40, 0, 46, 0, 56, 0, 50, 0, 62, 0, 69, 0, 64, 0, 62, 0, 67, 0, 69, 0, 66, 0, 79, 0, 68, 0, 66, 0, 77, 0, 79, 0, 75, 0, 73, 0, 78, 0, 75, 0, 70, 0, 73, 0, 72, 0, 63, 0, 74, 0, 72, 0, 61, 0, 63, 0, 65, 0, 71, 0, 76, 0, 65, 0, 60, 0, 71, 0, 103, 0, 88, 0, 105, 0, 103, 0, 80, 0, 88, 0, 113, 0, 108, 0, 116, 0, 113, 0, 102, 0, 108, 0, 107, 0, 118, 0, 115, 0, 118, 0, 99, 0, 95, 0, 99, 0, 89, 0, 87, 0, 89, 0, 107, 0, 106, 0, 107, 0, 99, 0, 118, 0, 99, 0, 107, 0, 89, 0, 83, 0, 98, 0, 86, 0, 83, 0, 90, 0, 98, 0, 94, 0, 119, 0, 96, 0, 94, 0, 111, 0, 119, 0, 80, 0, 85, 0, 88, 0, 80, 0, 82, 0, 85, 0, 96, 0, 91, 0, 94, 0, 96, 0, 97, 0, 91, 0, 117, 0, 111, 0, 114, 0, 117, 0, 119, 0, 111, 0, 105, 0, 101, 0, 103, 0, 105, 0, 109, 0, 101, 0, 84, 0, 93, 0, 92, 0, 93, 0, 112, 0, 110, 0, 112, 0, 104, 0, 100, 0, 104, 0, 84, 0, 81, 0, 84, 0, 112, 0, 93, 0, 112, 0, 84, 0, 104, 0),
"material": SubResource("StandardMaterial3D_v0clj"),
"name": "Table",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 120,
"vertex_data": PackedByteArray(15, 251, 0, 0, 208, 127, 209, 1, 15, 251, 0, 0, 208, 127, 243, 63, 15, 251, 0, 0, 208, 127, 244, 130, 9, 231, 40, 247, 49, 131, 209, 1, 9, 231, 40, 247, 49, 131, 244, 130, 15, 251, 0, 0, 224, 122, 209, 1, 15, 251, 0, 0, 224, 122, 243, 63, 15, 251, 0, 0, 224, 122, 234, 0, 9, 231, 40, 247, 65, 126, 209, 1, 9, 231, 40, 247, 65, 126, 234, 0, 254, 255, 0, 0, 208, 127, 243, 63, 254, 255, 0, 0, 208, 127, 244, 130, 254, 255, 0, 0, 208, 127, 105, 192, 249, 235, 40, 247, 49, 131, 244, 130, 249, 235, 40, 247, 49, 131, 105, 192, 254, 255, 0, 0, 224, 122, 243, 63, 254, 255, 0, 0, 224, 122, 234, 0, 254, 255, 0, 0, 224, 122, 105, 192, 249, 235, 40, 247, 65, 126, 234, 0, 249, 235, 40, 247, 65, 126, 105, 192, 46, 128, 0, 0, 239, 4, 87, 1, 46, 128, 0, 0, 239, 4, 185, 211, 46, 128, 0, 0, 239, 4, 27, 134, 205, 124, 40, 247, 245, 24, 87, 1, 205, 124, 40, 247, 245, 24, 27, 134, 30, 133, 0, 0, 239, 4, 185, 211, 30, 133, 0, 0, 239, 4, 27, 134, 30, 133, 0, 0, 239, 4, 21, 192, 189, 129, 40, 247, 245, 24, 27, 134, 189, 129, 40, 247, 245, 24, 21, 192, 46, 128, 0, 0, 0, 0, 87, 1, 46, 128, 0, 0, 0, 0, 185, 211, 46, 128, 0, 0, 0, 0, 104, 5, 205, 124, 40, 247, 5, 20, 87, 1, 205, 124, 40, 247, 5, 20, 104, 5, 30, 133, 0, 0, 0, 0, 185, 211, 30, 133, 0, 0, 0, 0, 104, 5, 30, 133, 0, 0, 0, 0, 21, 192, 189, 129, 40, 247, 5, 20, 104, 5, 189, 129, 40, 247, 5, 20, 21, 192, 208, 127, 0, 0, 15, 251, 248, 214, 208, 127, 0, 0, 15, 251, 206, 255, 208, 127, 0, 0, 15, 251, 162, 2, 49, 131, 40, 247, 9, 231, 206, 255, 49, 131, 40, 247, 9, 231, 162, 2, 224, 122, 0, 0, 15, 251, 4, 192, 224, 122, 0, 0, 15, 251, 248, 214, 224, 122, 0, 0, 15, 251, 206, 255, 65, 126, 40, 247, 9, 231, 4, 192, 65, 126, 40, 247, 9, 231, 206, 255, 208, 127, 0, 0, 255, 255, 248, 214, 208, 127, 0, 0, 255, 255, 212, 2, 208, 127, 0, 0, 255, 255, 162, 2, 49, 131, 40, 247, 249, 235, 212, 2, 49, 131, 40, 247, 249, 235, 162, 2, 224, 122, 0, 0, 255, 255, 4, 192, 224, 122, 0, 0, 255, 255, 248, 214, 224, 122, 0, 0, 255, 255, 212, 2, 65, 126, 40, 247, 249, 235, 4, 192, 65, 126, 40, 247, 249, 235, 212, 2, 239, 4, 0, 0, 46, 128, 252, 1, 239, 4, 0, 0, 46, 128, 246, 255, 239, 4, 0, 0, 46, 128, 211, 5, 244, 24, 40, 247, 205, 124, 246, 255, 244, 24, 40, 247, 205, 124, 211, 5, 239, 4, 0, 0, 30, 133, 252, 1, 239, 4, 0, 0, 30, 133, 207, 2, 239, 4, 0, 0, 30, 133, 211, 5, 244, 24, 40, 247, 189, 129, 207, 2, 244, 24, 40, 247, 189, 129, 211, 5, 0, 0, 0, 0, 46, 128, 9, 192, 0, 0, 0, 0, 46, 128, 252, 1, 0, 0, 0, 0, 46, 128, 246, 255, 5, 20, 40, 247, 205, 124, 9, 192, 5, 20, 40, 247, 205, 124, 246, 255, 0, 0, 0, 0, 30, 133, 9, 192, 0, 0, 0, 0, 30, 133, 252, 1, 0, 0, 0, 0, 30, 133, 207, 2, 5, 20, 40, 247, 189, 129, 9, 192, 5, 20, 40, 247, 189, 129, 207, 2, 160, 7, 221, 246, 165, 137, 200, 204, 160, 7, 221, 246, 165, 137, 2, 58, 160, 7, 221, 246, 89, 118, 25, 223, 160, 7, 221, 246, 89, 118, 229, 32, 160, 7, 221, 246, 89, 118, 2, 58, 160, 7, 255, 255, 89, 118, 25, 223, 160, 7, 255, 255, 89, 118, 229, 32, 160, 7, 255, 255, 89, 118, 170, 233, 160, 7, 255, 255, 165, 137, 200, 204, 160, 7, 255, 255, 165, 137, 170, 233, 89, 118, 221, 246, 160, 7, 70, 11, 89, 118, 221, 246, 160, 7, 70, 11, 89, 118, 221, 246, 160, 7, 2, 58, 165, 137, 221, 246, 160, 7, 2, 58, 165, 137, 221, 246, 160, 7, 70, 11, 165, 137, 255, 255, 160, 7, 170, 233, 165, 137, 255, 255, 160, 7, 70, 11, 89, 118, 255, 255, 160, 7, 70, 11, 89, 118, 255, 255, 160, 7, 70, 11, 89, 118, 255, 255, 160, 7, 170, 233, 165, 137, 221, 246, 94, 248, 2, 58, 165, 137, 221, 246, 94, 248, 140, 193, 165, 137, 221, 246, 94, 248, 140, 193, 89, 118, 221, 246, 94, 248, 140, 193, 89, 118, 221, 246, 94, 248, 2, 58, 89, 118, 255, 255, 94, 248, 140, 193, 89, 118, 255, 255, 94, 248, 170, 233, 165, 137, 255, 255, 94, 248, 170, 233, 165, 137, 255, 255, 94, 248, 140, 193, 165, 137, 255, 255, 94, 248, 140, 193, 94, 248, 221, 246, 89, 118, 2, 58, 94, 248, 221, 246, 89, 118, 229, 32, 94, 248, 221, 246, 165, 137, 2, 58, 94, 248, 221, 246, 165, 137, 200, 204, 94, 248, 221, 246, 165, 137, 54, 51, 94, 248, 255, 255, 165, 137, 170, 233, 94, 248, 255, 255, 165, 137, 200, 204, 94, 248, 255, 255, 165, 137, 54, 51, 94, 248, 255, 255, 89, 118, 170, 233, 94, 248, 255, 255, 89, 118, 229, 32, 57, 67, 211, 121, 68, 8, 221, 123, 19, 1, 205, 224, 57, 67, 211, 121, 19, 1, 205, 224, 57, 67, 211, 121, 68, 8, 221, 123, 173, 251, 68, 132, 57, 67, 211, 121, 173, 251, 68, 132, 68, 8, 221, 123, 19, 1, 205, 224, 253, 142, 145, 3, 19, 1, 205, 224, 253, 142, 145, 3, 68, 8, 221, 123, 173, 251, 68, 132, 253, 142, 145, 3, 173, 251, 68, 132, 253, 142, 145, 3, 33, 253, 116, 193, 88, 83, 83, 86, 220, 2, 222, 173, 33, 253, 116, 193, 220, 2, 223, 173, 88, 83, 83, 86, 220, 2, 222, 173, 187, 119, 201, 2, 220, 2, 223, 173, 187, 119, 201, 2, 33, 253, 116, 193, 88, 83, 83, 86, 105, 251, 75, 132, 33, 253, 116, 193, 105, 251, 75, 132, 88, 83, 83, 86, 105, 251, 75, 132, 187, 119, 201, 2, 105, 251, 75, 132, 187, 119, 201, 2, 163, 43, 69, 215, 243, 123, 198, 11, 120, 1, 73, 63, 243, 123, 198, 11, 120, 1, 73, 63, 68, 136, 131, 250, 162, 43, 69, 215, 243, 123, 198, 11, 68, 136, 131, 250, 243, 123, 198, 11, 162, 43, 69, 215, 8, 248, 70, 0, 120, 1, 73, 63, 8, 248, 70, 0, 120, 1, 73, 63, 68, 136, 131, 250, 162, 43, 69, 215, 8, 248, 70, 0, 68, 136, 131, 250, 8, 248, 70, 0, 233, 62, 211, 253, 197, 123, 154, 5, 254, 1, 217, 192, 197, 123, 154, 5, 254, 1, 217, 192, 233, 62, 211, 253, 146, 254, 12, 0, 254, 1, 217, 192, 146, 254, 12, 0, 254, 1, 217, 192, 119, 139, 241, 240, 233, 62, 211, 253, 197, 123, 154, 5, 119, 139, 241, 240, 197, 123, 154, 5, 119, 139, 241, 240, 233, 62, 211, 253, 146, 254, 12, 0, 119, 139, 241, 240, 146, 254, 12, 0, 99, 219, 99, 219, 255, 28, 253, 185, 6, 208, 6, 208, 6, 208, 6, 208, 255, 28, 253, 185, 6, 208, 6, 208, 6, 208, 6, 208, 245, 149, 4, 181, 99, 219, 99, 219, 245, 149, 4, 181, 201, 197, 201, 197, 201, 197, 201, 197, 255, 28, 253, 185, 255, 28, 253, 185, 53, 58, 53, 58, 245, 149, 4, 181, 53, 58, 53, 58, 201, 197, 201, 197, 201, 197, 201, 197, 245, 149, 4, 181, 255, 28, 253, 185, 54, 18, 54, 18, 54, 18, 54, 18, 200, 237, 200, 237, 255, 28, 253, 185, 200, 237, 200, 237, 245, 149, 4, 181, 245, 149, 4, 181, 54, 18, 54, 18, 54, 18, 54, 18, 255, 28, 253, 185, 248, 47, 248, 47, 255, 28, 253, 185, 155, 36, 155, 36, 155, 36, 155, 36, 245, 149, 4, 181, 155, 36, 155, 36, 155, 36, 155, 36, 245, 149, 4, 181, 248, 47, 248, 47)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_rvifb")

[sub_resource type="BoxShape3D" id="BoxShape3D_yw0aw"]
size = Vector3(1.24323, 0.923584, 1.09039)

[node name="Table" type="Node3D" groups=["Persistent"]]
script = ExtResource("1_7s1um")

[node name="Area3D" type="Area3D" parent="."]
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(0.83388, -2.90846e-16, 2.90846e-16, 2.90846e-16, 0.83388, -2.90846e-16, -2.90846e-16, 2.90846e-16, 0.833879, 0.0167444, 0.534076, -0.0137544)
shape = SubResource("BoxShape3D_jak58")

[node name="SafeBox" type="CSGBox3D" parent="."]
transform = Transform3D(0.244896, 0, 0, 0, 0.63326, 0, 0, 0, 0.230791, -0.0143998, 0.760531, 0.0243225)
visible = false
transparency = 0.9
size = Vector3(3.57167, 2.37312, 3.68365)
material = SubResource("StandardMaterial3D_5ffhn")

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.707107, 1.60554e-24, 0.707107, 3.48787e-16, 1, -3.48787e-16, -0.707107, 4.93259e-16, 0.707107, 0, 0.887241, 0)
mesh = SubResource("ArrayMesh_ygogu")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="Mesh"]
transform = Transform3D(0.707107, 3.48787e-16, 0.707107, -4.93259e-16, 1, 8.65961e-23, -0.707107, -3.48787e-16, 0.707107, -2.40642e-16, -0.689803, 2.94414e-12)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Mesh/StaticBody3D"]
transform = Transform3D(0.999995, -1.11563e-30, 1.19964e-12, -5.93839e-31, 1, 4.36811e-31, -1.0738e-11, 5.21363e-28, 0.999995, -0.0650123, 0.298556, 0.0201905)
shape = SubResource("BoxShape3D_yw0aw")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
